src/tests/snapshots/swayward__tests__window_opening__check_target_size@omT-dwU-dhU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width {  }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1272 × 712, bounds: 1272 × 712, states: []

post-map configures:
size: 1272 × 712, bounds: 1272 × 712, states: []
size: 1272 × 694, bounds: 1272 × 712, states: [Activated]
